// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`WAF Compiler Compiles children-projection.wc.jsx 1`] = `
"import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { signal as _signal } from "@preact/signals";
class WrapperElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    const el0 = document.createElement("div");
    el0.className = "wrapper";
    const el1 = document.createElement("header");
    const text2 = document.createTextNode("Header");
    el1.appendChild(text2);
    el0.appendChild(el1);
    const el3 = document.createElement("main");
    el0.appendChild(el3);
    const el4 = document.createElement("footer");
    const text5 = document.createTextNode("Footer");
    el4.appendChild(text5);
    el0.appendChild(el4);
    while (this.firstChild) el0.appendChild(this.firstChild);
    this.appendChild(el0);
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("waf-wrapper", WrapperElement);
export default WrapperElement;"
`;

exports[`WAF Compiler Compiles reactivity.wc.jsx 1`] = `
"import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { signal, effect as _effect, signal as _signal } from "@preact/signals";
class ReactivityElement extends HTMLElement {
  static observedAttributes = ["title"];
  constructor() {
    super();
    this._propsSignals = {
      title: _signal(null)
    };
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    const count = signal(0);
    const el0 = document.createElement("div");
    _effect(() => el0.title = props.title);
    const el1 = document.createElement("span");
    const text2 = document.createTextNode("");
    _effect(() => text2.textContent = count.value);
    el1.appendChild(text2);
    el0.appendChild(el1);
    const el3 = document.createElement("button");
    el3.onclick = () => count.value++;
    const text4 = document.createTextNode("Add");
    el3.appendChild(text4);
    el0.appendChild(el3);
    while (this.firstChild) el0.appendChild(this.firstChild);
    this.appendChild(el0);
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("waf-reactivity", ReactivityElement);
export default ReactivityElement;"
`;

exports[`WAF Compiler Compiles basic-elements.jsx 1`] = `
"export function render(root) {
  const el0 = document.createElement("div");
  const el1 = document.createElement("h1");
  const text2 = document.createTextNode("Hello");
  el1.appendChild(text2);
  el0.appendChild(el1);
  const el3 = document.createElement("p");
  const text4 = document.createTextNode("World");
  el3.appendChild(text4);
  el0.appendChild(el3);
  root.appendChild(el0);
}"
`;

exports[`WAF Compiler Compiles styling.wc.jsx 1`] = `
"import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { signal, effect as _effect, signal as _signal } from "@preact/signals";
class StylingTestElement extends HTMLElement {
  static observedAttributes = ["theme"];
  constructor() {
    super();
    this._propsSignals = {
      theme: _signal(null)
    };
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    const active = signal(true);
    const el0 = document.createElement("div");
    el0.className = "static-class";
    el0.className = "static-classname";
    const el1 = document.createElement("span");
    _effect(() => el1.className = active.value ? "active" : "inactive");
    const text2 = document.createTextNode("Reactive Class");
    el1.appendChild(text2);
    el0.appendChild(el1);
    const el3 = document.createElement("button");
    _effect(() => el3.className = props.theme);
    const text4 = document.createTextNode("Reactive ClassName from Props");
    el3.appendChild(text4);
    el0.appendChild(el3);
    while (this.firstChild) el0.appendChild(this.firstChild);
    this.appendChild(el0);
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("waf-stylingtest", StylingTestElement);
export default StylingTestElement;"
`;

exports[`WAF Compiler Compiles lifecycle.wc.jsx 1`] = `
"import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { signal as _signal } from "@preact/signals";
class LifecycleElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    ;
    this._onCleanups.push(() => {
      console.log("cleaned up");
    });
    const el0 = document.createElement("div");
    const text1 = document.createTextNode("Lifecycle");
    el0.appendChild(text1);
    while (this.firstChild) el0.appendChild(this.firstChild);
    this.appendChild(el0);
    (() => {
      console.log("mounted");
    })();
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("waf-lifecycle", LifecycleElement);
export default LifecycleElement;"
`;

exports[`WAF Compiler Compiles comments.jsx 1`] = `
"export function render(root) {
  const el0 = document.createElement("div");
  const el1 = document.createElement("h1");
  const text2 = document.createTextNode("Title");
  el1.appendChild(text2);
  el0.appendChild(el1);
  const el3 = document.createElement("p");
  el3.className = "foo";
  const text4 = document.createTextNode("Content");
  el3.appendChild(text4);
  el0.appendChild(el3);
  root.appendChild(el0);
}"
`;

exports[`WAF Compiler Compiles svg.wc.jsx 1`] = `
"import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { signal, effect as _effect, signal as _signal } from "@preact/signals";
class SvgTestElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    const strokeWidth = signal(2);
    const el0 = document.createElement("svg");
    el0.setAttribute("width", "100");
    el0.setAttribute("height", "100");
    el0.setAttribute("view-box", "0 0 100 100");
    const el1 = document.createElement("circle");
    el1.setAttribute("cx", "50");
    el1.setAttribute("cy", "50");
    el1.setAttribute("r", "40");
    el1.setAttribute("stroke", "red");
    _effect(() => el1.setAttribute("stroke-width", strokeWidth.value));
    el1.setAttribute("fill", "transparent");
    el0.appendChild(el1);
    const el2 = document.createElement("path");
    el2.setAttribute("d", "M 10 10 L 90 90");
    el2.setAttribute("stroke", "blue");
    el2.setAttribute("stroke-linecap", "round");
    el0.appendChild(el2);
    while (this.firstChild) el0.appendChild(this.firstChild);
    this.appendChild(el0);
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("waf-svgtest", SvgTestElement);
export default SvgTestElement;"
`;

exports[`WAF Compiler Compiles inline-styles.wc.jsx 1`] = `
"import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { signal, effect as _effect, signal as _signal } from "@preact/signals";
class StyleTestElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    const color = signal("red");
    const el0 = document.createElement("div");
    _effect(() => Object.assign(el0.style, {
      display: "flex",
      gap: "10px"
    }));
    const el1 = document.createElement("span");
    _effect(() => Object.assign(el1.style, {
      color: color.value
    }));
    const text2 = document.createTextNode("Reactive Style");
    el1.appendChild(text2);
    el0.appendChild(el1);
    const el3 = document.createElement("div");
    el3.setAttribute("style", "font-weight: bold;");
    const text4 = document.createTextNode("Static Style String");
    el3.appendChild(text4);
    el0.appendChild(el3);
    while (this.firstChild) el0.appendChild(this.firstChild);
    this.appendChild(el0);
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("waf-styletest", StyleTestElement);
export default StyleTestElement;"
`;
